fixed space under header on tablet portrait
fixed space under header on tablet portrait

--- a/style.css
+++ b/style.css
@@ -623,7 +623,7 @@ header {
 	background: url(images/header/slideshow/1.jpg) 50% 0 no-repeat;
 	background-size: auto;
 	height: 100%;
-	min-height: 620px;
+	max-height: 700px;
 }
 #tenthAnniversary {
 	background: url(images/tenth_anniversary/background.jpg) 50% 0 no-repeat;
@@ -811,6 +811,7 @@ footer .content .col3{
 header {
 	background: url(images/header/slideshow/1.jpg) 50% 0 no-repeat;
 	background-size: auto;
+	min-height: 620px;
 }
 #tenthAnniversary {
 	background: url(images/tenth_anniversary/background.jpg) 50% 0 no-repeat;
